@@ -1,12 +1,9 @@
 package com.dignamente.br.api.config;
 
-import java.util.List;
-
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpMethod;
 import org.springframework.security.config.Customizer;
-import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
@@ -17,9 +14,42 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
+import java.util.Arrays;
+
 @Configuration
-@EnableMethodSecurity
 public class SecurityBeansConfig {
+
+    @Bean
+    public SecurityFilterChain securityFilterChain(HttpSecurity http, JwtAuthenticationFilter jwtAuthFilter) throws Exception {
+        http
+            .csrf(csrf -> csrf.disable())
+            .cors(Customizer.withDefaults()) 
+            .sessionManagement(sm -> sm.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+            .authorizeHttpRequests(auth -> auth
+                .requestMatchers("/auth/**").permitAll()
+                
+                // 1. Rota de leitura (GET) para psicólogos continua livre para todos (pacientes agendarem)
+                .requestMatchers(HttpMethod.GET, "/psychologists", "/psychologists/**").permitAll()
+                
+                // 2. Rotas de exclusão (DELETE) e atualização (PUT) protegidas para ADMIN
+                .requestMatchers(HttpMethod.DELETE, "/psychologists/**").hasRole("ADMIN")
+                .requestMatchers(HttpMethod.PUT, "/psychologists/**").hasRole("ADMIN")
+                
+                // 3. Demais regras existentes
+                .requestMatchers("/patients", "/patients/**").permitAll()
+                .requestMatchers(HttpMethod.POST, "/files/upload").permitAll()
+                .requestMatchers("/files/**").permitAll()
+                .requestMatchers("/admins/**").hasRole("ADMIN")
+                .requestMatchers("/registration/*").hasRole("ADMIN")
+                .requestMatchers("/psychologists-registration/**").permitAll()
+                .requestMatchers("/test/**").permitAll()
+                .anyRequest().authenticated()
+            );
+
+        http.addFilterBefore(jwtAuthFilter, UsernamePasswordAuthenticationFilter.class);
+
+        return http.build();
+    }
 
     @Bean
     public PasswordEncoder passwordEncoder() {
@@ -28,57 +58,14 @@ public class SecurityBeansConfig {
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
-
         CorsConfiguration configuration = new CorsConfiguration();
-
-        configuration.setAllowedOrigins(
-                List.of("http://localhost:5173")
-        );
-
-        configuration.setAllowedMethods(
-                List.of(
-                        "GET",
-                        "POST",
-                        "PUT",
-                        "DELETE",
-                        "PATCH",
-                        "OPTIONS"
-                )
-        );
-
-        configuration.setAllowedHeaders(List.of("*"));
-
+        configuration.setAllowedOrigins(Arrays.asList("http://localhost:5173", "http://127.0.0.1:5173"));
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"));
+        configuration.setAllowedHeaders(Arrays.asList("*"));
         configuration.setAllowCredentials(true);
 
-        UrlBasedCorsConfigurationSource source =
-                new UrlBasedCorsConfigurationSource();
-
+        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
-
         return source;
-    }
-
-    @Bean
-    public SecurityFilterChain securityFilterChain(HttpSecurity http, JwtAuthenticationFilter jwtAuthFilter) throws Exception{
-        http
-        .csrf(csrf -> csrf.disable())
-        .cors(Customizer.withDefaults()) 
-        .sessionManagement(sm -> sm.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-        .authorizeHttpRequests(auth -> auth
-            .requestMatchers("/auth/**").permitAll()
-            .requestMatchers("/patients/**").permitAll()
-            .requestMatchers("/psychologists/**").permitAll()
-            .requestMatchers("/psychologists-registration").permitAll()
-            .requestMatchers(HttpMethod.POST, "/files/upload").permitAll()
-            .requestMatchers("/files/**").permitAll()
-            .requestMatchers("/admins/**").hasRole("ADMIN")
-            .requestMatchers("/registration/**").permitAll()
-            .requestMatchers("/test/**").permitAll()
-            .anyRequest().authenticated()
-        );
-
-        http.addFilterBefore(jwtAuthFilter, UsernamePasswordAuthenticationFilter.class);
-
-        return http.build();
     }
 }
